@@ -1,3 +1,7 @@
+Thu Apr 05 14:09:28 GMT 2012  Olly Betts <olly@survex.com>
+
+	* htmlparse.cc,htmlparsetest.cc: Add support for CDATA to HTML parser.
+
 Fri Mar 30 22:35:08 GMT 2012  Olly Betts <olly@survex.com>
 
 	* NEWS: Fix "an warning" to "a warning" in old entry.
